[gd_scene format=3 uid="uid://w7m6tehvvy3g"]

[ext_resource type="Script" uid="uid://ducbkoxoo1kjy" path="res://Scripts/player1.gd" id="1_nqhw5"]
[ext_resource type="Texture2D" uid="uid://cbss87b7xk5lc" path="res://Assets/Spritesheet/platformerPack_character.png" id="2_d37fk"]
[ext_resource type="Texture2D" uid="uid://dxp77wq60c2rr" path="res://Assets/Textures/CloudTexture.png" id="3_24efp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_57bci"]
atlas = ExtResource("2_d37fk")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2um1"]
atlas = ExtResource("2_d37fk")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjvmv"]
atlas = ExtResource("2_d37fk")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3yh2"]
atlas = ExtResource("2_d37fk")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_4nss6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57bci")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2um1")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjvmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3yh2")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v1l4e"]
radius = 35.014282

[sub_resource type="CircleShape2D" id="CircleShape2D_0ctox"]
radius = 34.525352

[sub_resource type="Curve" id="Curve_m2jh0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_3gc37"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Player" type="CharacterBody2D" unique_id=178596615 groups=["Player"]]
script = ExtResource("1_nqhw5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=747628418]
sprite_frames = SubResource("SpriteFrames_4nss6")
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1245864068]
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_v1l4e")

[node name="Collision" type="Area2D" parent="." unique_id=1821050806]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision" unique_id=1237768386]
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_0ctox")

[node name="ParticleTrails" type="CPUParticles2D" parent="." unique_id=1463406596]
position = Vector2(0, 42)
emitting = false
amount = 20
texture = ExtResource("3_24efp")
lifetime = 0.4
speed_scale = 0.8
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 0.2
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="DeathParticles" type="CPUParticles2D" parent="." unique_id=899946666]
position = Vector2(-1, 15)
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 0.4
emission_shape = 2
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 15.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
